feat: add pagination for lists