@@ -2,6 +2,10 @@ package pl.edu.backend.student.service;
 
 import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import pl.edu.backend.student.dto.StudentCreateDto;
@@ -14,7 +18,6 @@ import pl.edu.backend.student.repository.StudentRepository;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -23,10 +26,15 @@ public class StudentServiceImpl implements StudentService {
     private final StudentMapper studentMapper;
 
     @Override
-    public List<StudentPreviewDto> getAllPreview() {
-        return studentRepository.findAll().stream()
-                .map(studentMapper::toStudentPreviewDto)
-                .collect(Collectors.toList());
+    public List<StudentPreviewDto> getAllPreviewNonPageable() {
+        return studentRepository.findAll().stream().map(studentMapper::toStudentPreviewDto).toList();
+    }
+
+    @Override
+    public Page<StudentPreviewDto> getAllPreviewPageable(int page, int size) {
+        Pageable pageable = PageRequest.of(page, size, Sort.by("firstName").ascending());
+        return studentRepository.findAll(pageable)
+                .map(studentMapper::toStudentPreviewDto);
     }
 
     @Override
